# netbox-agent

./: .gitignore  .travis.yml  README.md  dev-requirements.txt  netbox_agent.yaml.example  pyproject.toml  requirements.txt  rpmenv.json  setup.cfg  setup.py  tests.sh  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: github-actions-demo.yml  github_action_test.yml  main.yaml  tests.yml  tests_pr.yml
netbox_agent/: __init__.py  cli.py  config.py  datacenter.py  dmidecode.py  ethtool.py  hypervisor.py  inventory.py  ipmi.py  lldp.py  location.py  logging.py  lshw.py  main.py  misc.py  network.py  nvme.py  ovs.py  power.py  server.py  virtualmachine.py
netbox_agent/dell/: dell.py
netbox_agent/drivers/: cmd.py  datacenter_cmd.py  datacenter_file.py  file.py
netbox_agent/hp/: hp.py
netbox_agent/raid/: base.py  dell.py  hp.py  omreport.py  storcli.py
netbox_agent/vendors/: dell.py  generic.py  hetzner.py  hp.py  qct.py  supermicro.py
tests/: conftest.py  constants.py  network.py  server.py  utils.py
tests/fixtures/: netbox_agent.conf1.ok
tests/fixtures/dmidecode/: Dell_DSS7500  Dell_PowerEdge_M630  HP_BL460c_Gen10  HP_BL460c_Gen9  HP_DL380p_Gen8  HP_ProLiant_BL460c_Gen10_Graphics_Exp  HP_ProLiant_m710x  HP_SL4540_Gen8  QCT_X10E-9N  SM_SSG-6028R  SM_SYS-6018R  SYS-5039MS-H12TRF-OS012.txt  unknown.txt
tests/fixtures/inventory/: nvme.json
tests/fixtures/lldp/: 223.txt  cumulus.txt  dedibox1.txt  dedibox2.txt  qfx.txt
