[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-agent"
version = "1.0.0"
description = "NetBox agent for server"
authors = [
    {name = "Solvik Blum", email = "solvik@solvik.fr"},
]
keywords = ["netbox"]
classifiers = [
    'Intended Audience :: Developers',
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13.0',
]
readme = "README.md"
requires-python = ">=3.8, <3.13.1"
dependencies = [
    "pynetbox==7.3.4",
    "netaddr==1.3.0",
    "netifaces2==0.0.22",
    "pyyaml==6.0.1",
    "jsonargparse==4.32.0",
    "python-slugify==8.0.4",
    "packaging==24.2",
    "distro==1.9.0",
]

[project.optional-dependencies]
tests = [
    "pytest~=8.3.3",
    "pytest-cov~=5.0.0",
]

style = [
  "ruff~=0.7.0",
]

[tool.ruff]
line-length = 99
src = ["netbox_agent", "tests"]
output-format = "grouped"
show-fixes = true

[tool.ruff.lint]
ignore = [
    "F841",
    "F841",
    "E203",
    "E501",
    "F401",
    "F821",
    "E721",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "*.py",
]
addopts = "-vv --showlocals --cov-report term-missing --cov-report xml --cov netbox_agent --no-cov-on-fail --tb=native -x"

[project.scripts]
netbox_agent = "netbox_agent.cli:main"

[tool.setuptools.packages.find]
where = ["netbox_agent"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[project.urls]
"Source" = "https://github.com/solvik/netbox_agent"

[project.license]
text = "Apache2"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/plaintext/markdown"}
